@@ -298,8 +298,7 @@ class Patch(artist.Artist):
         tpath = transform.transform_path_non_affine(path)
         affine = transform.get_affine()
 
-        if not np.isnan(tpath.vertices).any():
-            renderer.draw_path(gc, tpath, affine, rgbFace)
+        renderer.draw_path(gc, tpath, affine, rgbFace)
 
         #renderer.close_group('patch')
 
