@@ -1,3 +1,5 @@
+2009-01-26 Make curves and NaNs play nice together - MGD
+
 2009-01-19 Fix bug in quiver argument handling. - EF
 
 2009-01-19 Fix bug in backend_gtk: don't delete nonexistent toolbar. - EF
